--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,24 +1,26 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">18 dec</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">18 dec</a>
 
-    @if (accountService.currentUser()) {
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      @if (accountService.currentUser()) {
         <li class="nav-item">
-          <a class="nav-link">Matches</a>
+          <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Lists</a>
+          <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Messages</a>
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
         </li>
-      </ul>
-    }
+      }
+    </ul>
 
     @if (accountService.currentUser()) {
       <div dropdown class="dropdown">
-        <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome</a>
+        <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+          Welcome {{accountService.currentUser()?.username | titlecase}}
+        </a>
           <div *dropdownMenu class="dropdown-menu">
             <a class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
@@ -39,7 +41,7 @@
           class="form-control me-2"
           placeholder="Password"
           type="password">
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-success" type="submit">Login</button>
       </form>
     }
 
