--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -12,7 +12,7 @@
     <label>Username</label>
   </div>
 
-  <div class="mb-3">
+  <!-- <div class="mb-3">
     <label>What's my plan?</label>
     <select class="form-select">
       @for (user of usersFromHomeComponent(); track $index) {
@@ -21,7 +21,7 @@
         </option>
       }
     </select>
-  </div>
+  </div> -->
 
   <div class="mb-3 form-floating">
     <input
